--- a/index.html
+++ b/index.html
@@ -9,15 +9,34 @@
   <body>
     <header>
       <nav>
-        <div class="navbar">
-          <a href="#">Home</a>
+        <div class="topnav" id="myTopnav">
+          <a href="#home" class="active">Home</a>
+          <a href="#news">News</a>
+          <a href="#contact">Contact</a>
           <div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
+            <button class="dropbtn">
+              Dropdown
+              <i class="fa fa-caret-down"></i>
+            </button>
             <div class="dropdown-content">
-              <a href="#">Child 1</a>
-              <a href="#">Child 2</a>
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
             </div>
           </div>
+          <a href="#about">About</a>
+          <a
+            href="javascript:void(0);"
+            style="font-size: 15px"
+            class="icon"
+            onclick="myFunction()"
+            >&#9776;</a
+          >
+        </div>
+        <div style="padding-left: 16px">
+          <h2>Responsive Topnav with Dropdown</h2>
+          <p>Resize the browser window to see how it works.</p>
+          <p>Hover over the dropdown button to open the dropdown menu.</p>
         </div>
       </nav>
     </header>
