--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Blog</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <header>
@@ -15,13 +19,13 @@
           <a href="#contact">Contact</a>
           <div class="dropdown">
             <button class="dropbtn">
-              Dropdown
+              Characters
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
+              <a href="#">Kafka</a>
+              <a href="#">Eula</a>
+              <a href="#">Raiden</a>
             </div>
           </div>
           <a href="#about">About</a>
