--- a/index.html
+++ b/index.html
@@ -12,37 +12,31 @@
   </head>
   <body>
     <header>
-      <nav>
-        <div class="topnav" id="myTopnav">
-          <a href="#home" class="active">Home</a>
-          <a href="#news">News</a>
-          <div class="dropdown">
-            <button class="dropbtn">
-              Characters
-              <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-              <a href="#">Kafka</a>
-              <a href="#">Eula</a>
-              <a href="#">Raiden</a>
-            </div>
+      <nav class="topnav" id="myTopnav">
+        <a href="#home" class="active">Home</a>
+        <a href="#news">News</a>
+        <div class="dropdown">
+          <button class="dropbtn">
+            Characters
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="#">Kafka</a>
+            <a href="#">Eula</a>
+            <a href="#">Raiden</a>
           </div>
-          <a href="#about">About</a>
-          <a
-            href="javascript:void(0);"
-            style="font-size: 15px"
-            class="icon"
-            onclick="myFunction()"
-            >&#9776;</a
-          >
         </div>
-        <div style="padding-left: 16px">
-          <h2>Responsive Topnav with Dropdown</h2>
-          <p>Resize the browser window to see how it works.</p>
-          <p>Hover over the dropdown button to open the dropdown menu.</p>
-        </div>
+        <a href="#about">About</a>
+        <a
+          href="javascript:void(0);"
+          style="font-size: 15px"
+          class="icon"
+          onclick="myFunction()"
+          >&#9776;</a
+        >
       </nav>
     </header>
+
     <main>
       <section>
         <article>
