Removing default styles

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     <main>
       <section>
+        <h1>Hello 👋 Welcome to Kafka Altar</h1>
         <article>
           <h2>Blog Post 1</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -52,6 +53,7 @@
           <p>Integer sollicitudin, tortor non convallis malesuada.</p>
         </article>
       </section>
+
       <aside>
         <img src="./assets/kafka.jpg" alt="Blog Image" />
       </aside>
