--- a/index.html
+++ b/index.html
@@ -39,24 +39,20 @@
 
     <main>
       <section>
-        <h1>Hello 👋 Welcome to Kafka Altar</h1>
-        <article>
-          <h2>Blog Post 1</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
-        <article>
-          <h2>Blog Post 2</h2>
-          <p>Nulla facilisi. Curabitur sit amet eleifend justo.</p>
-        </article>
-        <article>
-          <h2>Blog Post 3</h2>
-          <p>Integer sollicitudin, tortor non convallis malesuada.</p>
-        </article>
+        <h1 class="main-title">
+          Hello 👋 Welcome to <span class="kafka">Kafka</span> Altar
+        </h1>
+        <div id="blogContainer" class="blog-container">
+          <article class="blog">
+            <h2>Blog 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </article>
+        </div>
       </section>
 
-      <aside>
+      <!-- <aside>
         <img src="./assets/kafka.jpg" alt="Blog Image" />
-      </aside>
+      </aside> -->
     </main>
     <footer>
       <p>&copy; 2023 Simple Blog</p>
