--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         </div>
       </section>
 
-      <!-- <aside>
+      <aside>
         <img src="./assets/kafka.jpg" alt="Blog Image" />
-      </aside> -->
+      </aside>
     </main>
     <footer>
       <p>&copy; 2023 Simple Blog</p>
