--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
         <img src="./assets/kafka.jpg" alt="Blog Image" />
       </aside>
     </main>
+
     <footer>
-      <p>&copy; 2023 Simple Blog</p>
+      <p>&copy; 2023 Pemuja Kafka</p>
     </footer>
     <script src="main.js"></script>
   </body>
