--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       </nav>
     </header>
 
-    <main>
-      <section>
+    <main class="main">
+      <div>
         <h1 class="main-title">
           Hello 👋 Welcome to <span class="kafka">Kafka</span> Altar
         </h1>
@@ -48,9 +48,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </article>
         </div>
-      </section>
+      </div>
 
-      <aside>
+      <aside class="side">
         <img src="./assets/kafka.jpg" alt="Blog Image" />
       </aside>
     </main>
